--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	  
 	  <ul class="fa-ul main-list">
 	    <li class="main-list-item">
-	      <span class="fa fa-github fa-lg main-list-item-icon"></span>
+	      <span class="fa fa-file fa-lg main-list-item-icon"></span>
 	      <a href="./resume.pdf">Resume</a>
 	    </li>
 	    <li class="main-list-item">
