--- a/index.html
+++ b/index.html
@@ -21,28 +21,40 @@
       
       <main>
 	<div class="content">
-          <!-- <h2>About</h2> -->
-	  <p>Hi! I recently graduated from the <a href="https://www.utoronto.ca/">University of Toronto</a>
-	  with a degree in Human Biology.</p>
+		<!-- <h2>About</h2> -->
+		
+		<font color="blue"><p><i>I am actively seeking software engineering summer internship positions!</i></p></font>
 
+		<p>
+		Hi! I'm a masters student studying computer science at <a href="https://www.northeastern.edu/">Northeastern</a>. 
+		I graduated from the <a href="https://www.utoronto.ca/">University of Toronto</a> with a degree in Human Biology.
+		</p>
+
+		<p>
+			At Northeastern, I'm currently a Graduate Research Assistant in Human-Computer Interaction, 
+			investigating effective visualization techniques and user interfaces for collaborative biometric data tracking. 
+		</p>
+		<p>
+			I am also a teaching assistant for CS5001 - Fundamentals of Computer Programming.
+		</p>
 	  <p>
-	    During my time there, I've done research with the Hwang
+		At the University of Toronto
+		<!-- , I've done research with the Hwang
 	    lab and Pardee lab at UofT and the Silveyra lab at Penn
-	    State University. In my final year, I worked to bring a
+		State University. In my final year,  -->
+		I worked to bring a
 	    medical device for post-surgical complications to
 	    prototype in partnership with
 	    the <a href="http://www.sickkids.ca/">Hospital for Sick
-	    Children</a> in Toronto, ON.
+	    Children</a>.
 	  </p>
 
-	  <p>Aside from school, I've also been the Captain of a
+	  <p>Aside from school, I volunteer at hackathons, and women in technology events. I've also been the Captain of a
 	    Dragon boat team, and the president for the UofT Biomod
 	    team, an international bio-molecular design competition. I
 	    volunteered with the Youth Nutrition Advisory Committee
 	    with the City of Toronto, and am a <a href="https://thevarsity.ca/author/utkarshnasinha/">journalist for the
 	    Varsity</a>, the UofT's student newspaper.</p>
-
-	  <p>I am actively seeking full time positions.</p>
 	  
 	  <hr />
 	  
