--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	  <ul class="fa-ul main-list">
 	    <li class="main-list-item">
 	      <span class="fa fa-file fa-lg main-list-item-icon"></span>
-	      <a href="./resume.pdf">Resume</a>
+	      <a href="./Utkarshna_Sinha_Northeastern.pdf">Resume</a>
 	    </li>
 	    <li class="main-list-item">
 	      <span class="fa fa-user fa-lg main-list-item-icon"></span>
