--- a/index.html
+++ b/index.html
@@ -23,37 +23,30 @@
 	<div class="content">
 		<!-- <h2>About</h2> -->
 		
-		<font color="blue"><p><i>I am actively seeking software engineering summer internship positions!</i></p></font>
+		<font color="blue"><p><i>I am actively seeking software engineering summer 2021 internship positions!</i></p></font>
+		<font color="blue"><p><i>I will be attending vGHC 2020 this week!</i></p></font>
 
 		<p>
-		Hi! I'm a masters student studying computer science at <a href="https://www.northeastern.edu/">Northeastern</a>. 
-		I graduated from the <a href="https://www.utoronto.ca/">University of Toronto</a> with a degree in Human Biology.
+		Hi! I'm a masters student at <a href="https://www.northeastern.edu/">Northeastern</a> studying computer science, specializing in Artificial Intelligence. 
 		</p>
 
 		<p>
-			At Northeastern, I'm currently a Graduate Research Assistant in Human-Computer Interaction, 
-			investigating effective visualization techniques and user interfaces for collaborative biometric data tracking. 
-		</p>
-		<p>
-			I am also a teaching assistant for CS5001 - Fundamentals of Computer Programming.
+			At Northeastern, I am a Graduate Teaching Assistant for CS5001 - Fundamentals of Computer Programming in Python (Spring 2020, Fall 2020).
+			I developed a declarative animation program end to end in Java, implementing graphics with the Java Swing UI Framework.
+			
 		</p>
 	  <p>
-		At the University of Toronto
-		<!-- , I've done research with the Hwang
-	    lab and Pardee lab at UofT and the Silveyra lab at Penn
-		State University. In my final year,  -->
-		I worked to bring a
-	    medical device for post-surgical complications to
-	    prototype in partnership with
+		I graduated from the <a href="https://www.utoronto.ca/">University of Toronto</a> with a degree in Human Biology.
+		  At the University of Toronto
+		I worked to bring a medical device for post-surgical complications to prototype in partnership with
 	    the <a href="http://www.sickkids.ca/">Hospital for Sick
 	    Children</a>.
 	  </p>
 
 	  <p>Aside from school, I volunteer at hackathons, and women in technology events. I've also been the Captain of a
-	    Dragon boat team, and the president for the UofT Biomod
-	    team, an international bio-molecular design competition. I
+	    Dragon boat team, and the president for the UofT Biomod team, an international bio-molecular design competition. I
 	    volunteered with the Youth Nutrition Advisory Committee
-	    with the City of Toronto, and am a <a href="https://thevarsity.ca/author/utkarshnasinha/">journalist for the
+	    with the City of Toronto, and was a <a href="https://thevarsity.ca/author/utkarshnasinha/">journalist for the
 	    Varsity</a>, the UofT's student newspaper.</p>
 	  
 	  <hr />
