--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 	      <span class="fa fa-user fa-lg main-list-item-icon"></span>
 	      <a href="https://www.linkedin.com/in/utkarshnas/">LinkedIn</a>
 	    </li>
+	    <li class="main-list-item">
+	      <span class="fa fa-twitter fa-lg main-list-item-icon"></span>
+	      <a href="https://https://twitter.com/utkarshna">Twitter</a>
+	    </li>
 	  </ul>
 	</div>
       </main>
