--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <header>
         <div class="logo-container">
-          <a class="logo" href="" style="background-image: url('./images/dna_brown.svg')"></a>
+          <a class="logo" href="" style="background-image: url('./images/logo.jpg')"></a>
         </div>
         <div class="author-container"><h1>Utkarshna Sinha</h1></div>
         <div class="tagline-container"><p></p></div>
@@ -62,7 +62,7 @@
 	    </li>
 	    <li class="main-list-item">
 	      <span class="fa fa-twitter fa-lg main-list-item-icon"></span>
-	      <a href="https://https://twitter.com/utkarshna">Twitter</a>
+	      <a href="https://twitter.com/utkarshna">Twitter</a>
 	    </li>
 	  </ul>
 	</div>
