Update website content

--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 		<!-- <h2>About</h2> -->
 		
 		<font color="blue"><p><i>I am actively seeking software engineering summer 2021 internship positions!</i></p></font>
-		<font color="blue"><p><i>I will be attending vGHC 2020 this week!</i></p></font>
 
 		<p>
-		Hi! I'm a masters student at <a href="https://www.northeastern.edu/">Northeastern</a> studying computer science, specializing in Artificial Intelligence. 
+		Hi! I'm a masters student at <a href="https://www.northeastern.edu/">Northeastern</a> studying computer science, specializing in Artificial Intelligence and Data Science. 
 		</p>
 
 		<p>
 			At Northeastern, I am a Graduate Teaching Assistant for CS5001 - Fundamentals of Computer Programming in Python (Spring 2020, Fall 2020).
+			I am currently working on creating a recommendation engine using content-based filtering for scientific publications.
+			In my courses, have implemented various search and reinforcment learning algorithms to solve Pacman, and built a multithreaded networked database server.
 			I developed a declarative animation program end to end in Java, implementing graphics with the Java Swing UI Framework.
 			
 		</p>
